Feat: Responsive Hero Section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import "../styles/responsive.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="icon" href="/Laundryku.svg">
 		<title>LaundryKu</title>
 	</head>
 	<body>
@@ -21,9 +22,9 @@ import "../styles/responsive.css"
 					<a href="#" class="hero-navbar-menu-item">Testimoni</a>
 					<a href="#" class="hero-navbar-menu-item">Kontak</a>
 				</div>
-                <a href="#" class="hero-navbar-sidebar-button">
-                    <img src="/icons/sidebar.svg">
-                </a>
+				<a href="#" class="hero-navbar-sidebar-button">
+					<img src="/icons/sidebar.svg" />
+				</a>
 			</div>
 			<div class="hero-content">
 				<div class="hero-text">
@@ -34,18 +35,18 @@ import "../styles/responsive.css"
 					</div>
 					<div class="hero-button">
 						<a href="#" class="hero-button-order">
-							<img src="/icons/shoping-cart.svg" alt="">
-							Pesan 
-                            <span class="cutting-off-text">Sekarang</span>
+							<img src="/icons/shoping-cart.svg" alt="" />
+							Pesan
+							<span class="cutting-off-text">Sekarang</span>
 						</a>
 						<a href="#" class="hero-button-pricing">
-							<img src="/icons/dollar.svg" alt="">
+							<img src="/icons/dollar.svg" alt="" />
 							<span class="cutting-off-text">Lihat</span> Harga
 						</a>
 					</div>
 				</div>
 				<div class="hero-image">
-					<img src="/images/foto-tumpukan-baju.png">
+					<img src="/images/foto-tumpukan-baju.png" />
 				</div>
 			</div>
 		</div>
