--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,12 +1,51 @@
+@media screen and (min-width: 425px) {
+	/* hero Section */
+	.hero-text{
+			width: 80%;
+	}
+	.hero-image{
+		width: 20%;
+	}
+	.hero-image img {
+		top: 1rem;
+		left: -6rem;
+		height: auto;
+		width: 300%;
+	}
+	.hero-text-title{
+		width: 75%;
+	}
+	.hero-text-desc {
+		width: 90%;
+	}
+	/* End Hero Section */
+}
 @media screen and (min-width: 640px) {
+	/* Hero Section */
 	.hero-navbar-logo {
 		font-size: 1.2rem;
 	}
+	.hero-text{
+		width: 70%;
+	}
+	.hero-text-title{
+		width: 100%;
+	}
+	.hero-image{
+		width: 30%;
+	}
+	.hero-image img {
+		top: 0;
+		left: 0rem;
+		width: 100%;
+	}
+	/* End Hero Section */
 }
 
 @media screen and (min-width: 768px) {
+	/* Hero Section */
 	.hero {
-		padding: 2rem 4rem 8rem;
+		padding: 2rem 4rem 4rem;
 	}
 	.hero-navbar-menu {
 		display: flex;
@@ -15,7 +54,7 @@
 		display: none;
 	}
 	.hero .hero-navbar {
-		margin-bottom: 5rem;
+		margin-bottom: 3rem;
 	}
 	.hero-text-title {
 		font-size: 3rem;
@@ -29,30 +68,70 @@
 	.hero-image {
 		width: 30%;
 	}
+	.hero-image img {
+		width: 130%;
+		top: 1rem;
+	}
 	.hero-text-title {
-		font-size: 3rem;
+		font-size: 2.5rem;
 	}
 	.hero-text-desc {
-		width: 75%;
+		width: 85%;
+		font-size: 1rem;
 	}
+	/* End Hero Section */
 }
 
 @media screen and (min-width: 1024px) {
+	/* Hero Section */
+	.hero-navbar{
+		margin-bottom: 5rem;
+	}
 	.hero-navbar-menu {
 		gap: 2rem;
 	}
 	.hero-navbar-menu a {
-		font-size: 1rem;
+		font-size: 1.1rem;
 	}
 	.hero-navbar-logo {
 		font-size: 2rem;
 	}
+	.hero-image img {
+		left: -4.5rem;
+		width: 140%;
+		top: 4rem;
+	}
+	.hero-text-title {
+		font-size: 3.5rem;
+	}
+	.hero-text-desc {
+		width: 70%;
+		font-size: 1.2rem;
+	}
+	.hero-button a {
+		font-size: 1.1rem;
+	}
+	.hero-button a img {
+		width: 1.2rem;
+	}
+	/* End Hero Section */
+}
+@media screen and (min-width: 1400px) {
+	/* Hero Section */
 	.hero-text-title {
 		font-size: 5rem;
 	}
-	.hero-text-desc {
-		font-size: 1.2rem;
+	.hero .hero-navbar{
+		margin-bottom: 5rem;
 	}
-}
-@media screen and (min-width: 1400px) {
+	.hero-text-desc{
+		width: 60%;
+		font-size: 1.5rem;
+	}
+	.hero-image img {
+		width: 130%;
+		left: -8rem;
+		top: 2rem;
+	}
+	/* End Hero Section */
 }
