Feat: Decoration Hero Section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,15 +35,17 @@ import "../styles/responsive.css"
 					</div>
 					<div class="hero-button">
 						<a href="#" class="hero-button-order">
-							<img src="/icons/shoping-cart.svg" alt="" />
+							<img src="/icons/shoping-cart.svg" />
 							Pesan
 							<span class="cutting-off-text">Sekarang</span>
 						</a>
 						<a href="#" class="hero-button-pricing">
-							<img src="/icons/dollar.svg" alt="" />
+							<img src="/icons/dollar.svg" />
 							<span class="cutting-off-text">Lihat</span> Harga
 						</a>
 					</div>
+					<img class="hero-decoration" id="hero-decoration-1" src="/decoration/hero-decoration-1.svg">
+					<img class="hero-decoration" id="hero-decoration-2" src="/decoration/hero-decoration-2.svg">
 				</div>
 				<div class="hero-image">
 					<img src="/images/foto-tumpukan-baju.png" />
