--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import "../styles/styles.css"
-import "../styles/responsive.css"
+import "../styles/global.css"
 ---
 
 <html lang="en">
@@ -9,47 +8,48 @@ import "../styles/responsive.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<link rel="icon" href="/Laundryku.svg">
+		<link rel="icon" href="/Laundryku.svg" />
 		<title>LaundryKu</title>
 	</head>
 	<body>
-		<div class="hero">
-			<div class="hero-navbar">
-				<div class="hero-navbar-logo">Laundryku</div>
-				<div class="hero-navbar-menu">
-					<a href="#" class="hero-navbar-menu-item">Beranda</a>
-					<a href="#" class="hero-navbar-menu-item">Harga</a>
-					<a href="#" class="hero-navbar-menu-item">Testimoni</a>
-					<a href="#" class="hero-navbar-menu-item">Kontak</a>
+		<div class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-30 md:pb-28 lg:pb-38">
+			<div class="flex justify-between items-center w-full pb-10 text-[#333333] md:pb-16">
+				<div class="w-1/4 font-bold text-base md:text-2xl">LaundryKu</div>
+				<div class="w-3/4 gap-4 hidden xs:flex justify-end md:gap-16 items-center">
+					<a href="#" class="text-xs md:text-base">Beranda</a>
+					<a href="#" class="text-xs md:text-base">Harga</a>
+					<a href="#" class="text-xs md:text-base">Testimoni</a>
+					<a href="#" class="text-xs md:text-base">Kontak</a>
 				</div>
-				<a href="#" class="hero-navbar-sidebar-button">
-					<img src="/icons/sidebar.svg" />
-				</a>
 			</div>
-			<div class="hero-content">
-				<div class="hero-text">
-					<div class="hero-text-title">Solusi praktis untuk pakaian bersih</div>
-					<div class="hero-text-desc">
+			<div class=" flex overflow-x-hidden">
+				<div class="w-full text-[#333333]">
+					<div class="text-4xl font-bold w-1/2 pb-4 xs:text-5xl sm:text-6xl md:pb-6 md:w-3/6 lg:pb-10 lg:w-4/5 xl:w-3/5 text-shadow-home xl:text-7xl">Solusi praktis untuk pakaian bersih</div>
+					<div class="text-sm pb-8 sm:w-3/4 sm:text-base md:w-3/4 lg:w-1/2 text-shadow-home xl:text-xl xl:w-1/3">
 						Kamu yang ingin pakaian bersih, wangi, dan rapi tanpa repot. Layanan laundry terpercaya dengan kualitas
 						premium.
 					</div>
-					<div class="hero-button">
-						<a href="#" class="hero-button-order">
-							<img src="/icons/shoping-cart.svg" />
+					<div class="flex w-full justify-between xs:justify-start xs:gap-4 lg:gap-10">
+						<a
+							href="#"
+							class="flex items-center bg-[#18181B]/80 p-4 hover:bg-[#18181B] rounded-3xl text-[#FFFFFF] text-sm lg:font-bold transition-all duration-100"
+						>
+							<img class="w-6 pr-2" src="/icons/shoping-cart.svg" />
 							Pesan
-							<span class="cutting-off-text">Sekarang</span>
+							<span class="hidden md:block md:pl-1">Sekarang</span>
 						</a>
-						<a href="#" class="hero-button-pricing">
-							<img src="/icons/dollar.svg" />
-							<span class="cutting-off-text">Lihat</span> Harga
+						<a
+							href="#"
+							class="text-[#333333] border border-[#333333] hover:bg-[#18181B]/80 hover:text-[#FFFFFF] flex items-center p-4 rounded-3xl text-sm lg:font-bold transition-all duration-100"
+						>
+							<img class="w-6 pr-2" src="/icons/dollar.svg" />
+							<span class="hidden md:block md:pr-1">Lihat</span> Harga
 						</a>
 					</div>
-					<img class="hero-decoration" id="hero-decoration-1" src="/decoration/hero-decoration-1.svg">
-					<img class="hero-decoration" id="hero-decoration-2" src="/decoration/hero-decoration-2.svg">
+					<img class="absolute bottom-[-2rem] w-42 right-[-2rem] md:left-68 lg:bottom-0 lg:left-78" id="hero-decoration-1" src="/decoration/hero-decoration-1.svg" />
+					<img class="absolute bottom-[-1rem] w-36 left-0 lg:bottom-0 xl:left-3" id="hero-decoration-2" src="/decoration/hero-decoration-2.svg" />
 				</div>
-				<div class="hero-image">
-					<img src="/images/foto-tumpukan-baju.png" />
-				</div>
+				<img class="absolute top-[5rem] right-[-5rem] w-[65%] xs:w-[55%] xxs:right-[-4rem] xs:right-[-1rem] sm:top-[8rem] md:right-[0rem] md:w-[45%] transition-all duration-100 lg:top-[10rem] lg:w-[40%] lg:right-[2rem]" src="/images/foto-tumpukan-baju.png" />
 			</div>
 		</div>
 	</body>
