--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 	--breakpoint-xxs: 20rem;
 	--breakpoint-xs: 30rem; 
 	--text-shadow-home: 0px 3px 3px rgba(51, 51, 51, 0.4);
+	--text-tiny: 0.625rem;
 }
 
 *,
