--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,8 +101,15 @@ import "../styles/global.css"
 						24-hour turnaround
 					</div>
 				</div>
-				<img src="/decoration/pricing-decoration-1.svg" class="hidden md:block absolute top-[-2rem] lg:top-[-3.5rem] right-[-1rem] w-1/2" />
-				<img src="/decoration/pricing-decoration-2.svg" class="hidden md:block absolute bottom-[-1rem] left-[1rem] w-1/2 lg:w-1/3" alt="" />
+				<img
+					src="/decoration/pricing-decoration-1.svg"
+					class="hidden md:block absolute top-[-2rem] lg:top-[-3.5rem] right-[-1rem] w-1/2"
+				/>
+				<img
+					src="/decoration/pricing-decoration-2.svg"
+					class="hidden md:block absolute bottom-[-1rem] left-[1rem] w-1/2 lg:w-1/3"
+					alt=""
+				/>
 			</div>
 			<div class="grid grid-cols-1 xs:grid-cols-2 md:grid-cols-1 gap-2 md:w-2/3">
 				<div
@@ -112,7 +119,10 @@ import "../styles/global.css"
 						<span class="pb-2 xxs:pb-0 text-xs">Premium fabric treatment</span>
 					</div>
 					<span class="font-bold lg:text-2xl">Rp 15.000 / KG</span>
-					<img src="/decoration/pricing-decoration-3.svg" class="hidden md:block absolute top-[-3rem] lg:top-[-4rem] right-[-1rem] w-1/6 lg:w-1/8">
+					<img
+						src="/decoration/pricing-decoration-3.svg"
+						class="hidden md:block absolute top-[-3rem] lg:top-[-4rem] right-[-1rem] w-1/6 lg:w-1/8"
+					/>
 				</div>
 				<div
 					class="bg-[#245B78] rounded-lg text-white p-2 xxs:p-4 xxs:py-5 md:py-8 lg:py-10 md:px-16 lg:px-24 flex flex-col xxs:flex-row items-center justify-between relative">
@@ -121,7 +131,10 @@ import "../styles/global.css"
 						<span class="pb-2 xxs:pb-0 text-xs">Same-day delivery available</span>
 					</div>
 					<span class="font-bold lg:text-2xl">Rp 10.000 / KG</span>
-					<img src="/decoration/pricing-decoration-4.svg" class="hidden md:block absolute top-[-4rem] xl:top-[-6rem] left-[-4rem] xl:left-[-5rem] w-2/5 lg:w-1/4">
+					<img
+						src="/decoration/pricing-decoration-4.svg"
+						class="hidden md:block absolute top-[-4rem] xl:top-[-6rem] left-[-4rem] xl:left-[-5rem] w-2/5 lg:w-1/4"
+					/>
 				</div>
 				<div
 					class="bg-[#054468] rounded-lg text-white p-2 xxs:p-4 xxs:py-5 md:py-8 lg:py-10 md:px-16 lg:px-24 flex flex-col xxs:flex-row items-center justify-between relative">
@@ -130,8 +143,14 @@ import "../styles/global.css"
 						<span class="pb-2 xxs:pb-0 text-xs">Convenient folded service</span>
 					</div>
 					<span class="font-bold lg:text-2xl">Rp 8.000 / KG</span>
-					<img src="/decoration/pricing-decoration-5.svg" class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/5 lg:w-1/6">
-					<img src="/decoration/pricing-decoration-6.svg" class="hidden md:block absolute bottom-[-3rem] right-[0rem] w-1/5 lg:w-1/8 z-10">
+					<img
+						src="/decoration/pricing-decoration-5.svg"
+						class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/5 lg:w-1/6"
+					/>
+					<img
+						src="/decoration/pricing-decoration-6.svg"
+						class="hidden md:block absolute bottom-[-3rem] right-[0rem] w-1/5 lg:w-1/8 z-10"
+					/>
 				</div>
 				<div
 					class="bg-[#1B3463] rounded-lg text-white p-2 xxs:p-4 xxs:py-5 md:py-8 lg:py-10 md:px-16 lg:px-24 flex flex-col xxs:flex-row items-center justify-between relative">
@@ -140,9 +159,43 @@ import "../styles/global.css"
 						<span class="pb-2 xxs:pb-0 text-xs">Essential laundry service</span>
 					</div>
 					<span class="font-bold lg:text-2xl">Rp 6.000 / KG</span>
-					<img src="/decoration/pricing-decoration-7.svg" class="hidden md:block absolute top-[-5rem] xl:top-[-6rem] left-[-5rem] xl:left-[-6rem] w-2/5 lg:w-1/4">
+					<img
+						src="/decoration/pricing-decoration-7.svg"
+						class="hidden md:block absolute top-[-5rem] xl:top-[-6rem] left-[-5rem] xl:left-[-6rem] w-2/5 lg:w-1/4"
+					/>
 				</div>
 			</div>
 		</div>
+		<!-- Review Section -->
+		<div></div>
+		<!-- Footer Section -->
+		<footer class="bg-[#18181B] px-16 pt-12 pb-4 text-[#F1F1F1] rounded-lg">
+			<div class="w-full flex justify-between flex-col md:flex-row pb-8">
+				<div class="flex flex-col gap-5 w-full md:w-1/5 pb-8 md:pb-0">
+					<div class="text-2xl font-bold">LaundryKu</div>
+					<div class="text-xs w-full md:w-2/3">Professional laundry and dry cleaning service with free pickup and delivery</div>
+				</div>
+				<div class="w-full md:w-2/5 flex gap-8 xs:gap-16 justify-between md:justify-end flex-col xs:flex-row">
+					<div class="flex flex-col gap-2">
+						<div class="text-xl font-bold">Services</div>
+						<div class="flex flex-col gap-2">
+							<div  class="text-xs">Wash & Fold</div>
+							<div  class="text-xs">Dry Cleaning</div>
+							<div  class="text-xs">Pickup & Delivery</div>
+							<div  class="text-xs"> Commercial Services</div>
+						</div>
+					</div>
+					<div class="flex flex-col gap-2">
+						<div class="text-xl font-bold">Contact</div>
+						<div class="flex flex-col gap-2">
+							<div class="text-xs">0811-9999-6969</div>
+							<div class="text-xs">laundryku@laundry.com</div>
+							<div class="text-xs">Kariangau agak kiri dikit</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="text-xs mt-8 text-center">© 2025 LaundryKu. All Rights reserved.️</div>
+		</footer>
 	</body>
 </html>
