--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,7 +182,7 @@ const reviews = [
 					<span class="font-bold lg:text-2xl">Rp 10.000 / KG</span>
 					<img
 						src="/decoration/pricing-decoration-4.svg"
-						class="hidden md:block absolute top-[-4rem] xl:top-[-6rem] left-[-4rem] xl:left-[-5rem] w-2/5 lg:w-1/4"
+						class="hidden md:block absolute top-[-3rem] xl:top-[-6rem] left-[-3rem] xl:left-[-5rem] w-1/4"
 					/>
 				</div>
 				<div
@@ -194,11 +194,11 @@ const reviews = [
 					<span class="font-bold lg:text-2xl">Rp 8.000 / KG</span>
 					<img
 						src="/decoration/pricing-decoration-5.svg"
-						class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/5 lg:w-1/6"
+						class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/6 "
 					/>
 					<img
 						src="/decoration/pricing-decoration-6.svg"
-						class="hidden md:block absolute bottom-[-3rem] right-[0rem] w-1/5 lg:w-1/8 z-10"
+						class="hidden md:block absolute bottom-[-2rem] right-[0rem] w-1/8 z-10"
 					/>
 				</div>
 				<div
@@ -210,7 +210,7 @@ const reviews = [
 					<span class="font-bold lg:text-2xl">Rp 6.000 / KG</span>
 					<img
 						src="/decoration/pricing-decoration-7.svg"
-						class="hidden md:block absolute top-[-5rem] xl:top-[-6rem] left-[-5rem] xl:left-[-6rem] w-2/5 lg:w-1/4"
+						class="hidden md:block absolute top-[-3rem] xl:top-[-6rem] left-[-3rem] xl:left-[-6rem] w-1/4"
 					/>
 				</div>
 			</div>
