--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -231,16 +231,16 @@ const reviews = [
 				{
 					reviews.map((item) => (
 						<div class="flex break-inside-avoid flex-col gap-3 p-4 rounded-2xl shadow-review bg-white">
-							<div class="text-sm text-[#2B2B2B]">{item.review}</div>
+							<div class="text-xs md:text-sm text-[#2B2B2B]">{item.review}</div>
 							<div class="flex justify-between items-center">
 								<div class="flex items-center gap-2">
-									<img src="/icons/user.svg" class="w-10" />
+									<img src="/icons/user.svg" class="w-8 md:w-10" />
 									<div class="flex flex-col">
-										<span class="font-bold">{item.name}</span>
-										<span class="text-[#646565]">Customer</span>
+										<span class="font-bold text-sm md:text-sm">{item.name}</span>
+										<span class="text-[#646565] text-xs md:text-sm">Customer</span>
 									</div>
 								</div>
-								<div>{item.date}</div>
+								<div class="text-xs md:text-sm">{item.date}</div>
 							</div>
 						</div>
 					))
