--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ const reviews = [
 	<body class="flex flex-col gap-4">
 		<!-- Hero Section -->
 		<div id="hero"
-			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-30 md:pb-28 lg:pb-38">
+			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-30 md:pb-28 lg:pb-38 min-h-[97vh]">
 			<div class="flex justify-between items-center w-full pb-10 text-[#333333] md:pb-16">
 				<div class="w-1/4 font-bold text-base md:text-2xl">LaundryKu</div>
 				<div class="w-3/4 gap-4 hidden xs:flex justify-end md:gap-16 items-center">
