--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,8 +62,9 @@ const reviews = [
 	</head>
 	<body class="flex flex-col gap-4">
 		<!-- Hero Section -->
-		<div id="hero"
-			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-30 md:pb-28 lg:pb-38 min-h-[97vh]">
+		<div
+			id="hero"
+			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-40 md:pb-28 lg:pb-38 h-fit md:h-[calc(100vh-6rem)] lg:h-[calc(100vh-8rem)] xl:h-[calc(100vh-10rem)] 2xl:h-[calc(100vh-12rem)] 3xl:h-[calc(100vh-14rem)] 4xl:h-[calc(100vh-16rem]">
 			<div class="flex justify-between items-center w-full pb-10 text-[#333333] md:pb-16">
 				<div class="w-1/4 font-bold text-base md:text-2xl">LaundryKu</div>
 				<div class="w-3/4 gap-4 hidden xs:flex justify-end md:gap-16 items-center">
@@ -79,7 +80,7 @@ const reviews = [
 						class="text-4xl font-bold w-1/2 pb-4 xs:text-5xl sm:text-6xl md:pb-6 md:w-3/6 lg:pb-10 lg:w-4/5 xl:w-3/5 text-shadow-home xl:text-7xl">
 						Solusi praktis untuk pakaian bersih
 					</div>
-					<div class="text-sm pb-8 sm:w-3/4 sm:text-base md:w-3/4 lg:w-1/2 text-shadow-home xl:text-xl xl:w-1/3">
+					<div class="text-md pb-8 sm:w-3/4 sm:text-base md:w-3/4 lg:w-1/2 text-shadow-home xl:text-xl xl:w-1/3">
 						Kamu yang ingin pakaian bersih, wangi, dan rapi tanpa repot. Layanan laundry terpercaya dengan kualitas
 						premium.
 					</div>
@@ -194,7 +195,7 @@ const reviews = [
 					<span class="font-bold lg:text-2xl">Rp 8.000 / KG</span>
 					<img
 						src="/decoration/pricing-decoration-5.svg"
-						class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/6 "
+						class="hidden md:block absolute top-[-4rem] lg:top-[-6rem] right-0 w-1/6"
 					/>
 					<img
 						src="/decoration/pricing-decoration-6.svg"
@@ -229,8 +230,12 @@ const reviews = [
 			<div class="columns-1 md:columns-2 lg:columns-3 gap-4 w-full mx-auto pb-4 space-y-4">
 				<!-- Card Review -->
 				{
-					reviews.map((item) => (
-						<div class="flex break-inside-avoid flex-col gap-3 p-4 rounded-2xl shadow-review bg-white">
+					reviews.map((item, index) => (
+						<div
+							class={
+								"flex break-inside-avoid flex-col gap-3 p-4 rounded-2xl shadow-review bg-white " +
+								(index > 2 ? "hidden md:block" : "")
+							}>
 							<div class="text-xs md:text-sm text-[#2B2B2B]">{item.review}</div>
 							<div class="flex justify-between items-center">
 								<div class="flex items-center gap-2">
