--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const reviews = [
 		<!-- Hero Section -->
 		<div
 			id="hero"
-			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-40 md:pb-28 lg:pb-38 h-fit md:h-[calc(100vh-6rem)] lg:h-[calc(100vh-8rem)] xl:h-[calc(100vh-10rem)] 2xl:h-[calc(100vh-12rem)] 3xl:h-[calc(100vh-14rem)] 4xl:h-[calc(100vh-16rem]">
+			class="hero bg-[#87cefa] w-full flex overflow-hidden flex-col rounded-lg p-4 relative sm:p-12 transition-all duration-100 pb-40 md:pb-28 lg:pb-38 h-fit">
 			<div class="flex justify-between items-center w-full pb-10 text-[#333333] md:pb-16">
 				<div class="w-1/4 font-bold text-base md:text-2xl">LaundryKu</div>
 				<div class="w-3/4 gap-4 hidden xs:flex justify-end md:gap-16 items-center">
